added input fields and button

--- a/index.html
+++ b/index.html
@@ -9,6 +9,19 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <main>
+        <h2>Add Employee</h2>
+        <input type="text" name="name" placeholder="First Name"/>
+        <input type="text" name="last-name" placeholder="Last Name"/>
+        <input type="text" name="identify" placeholder="ID Number"/>        
+        <input type="text" name="job-title" placeholder="Job Title"/>
+        <input type="number" name="salary" placeholder="Annual Salary"/>
+        <div>
+            <button id="add-btn">Add Employee</button>
+        </div>
+
+
+
+    </main>
 </body>
 </html>
