--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="jquery-3.6.0.min.js"></script>
     <script src="script.js" charset="utf-8"></script>
+    <link rel="stylesheet" href="style.css"/> 
     <title>Document</title>
 </head>
 <body>
