added the first row to the data table

--- a/index.html
+++ b/index.html
@@ -12,14 +12,42 @@
 <body>
     <main>
         <h2>Add Employee</h2>
-        <input type="text" name="name" placeholder="First Name"/>
-        <input type="text" name="last-name" placeholder="Last Name"/>
-        <input type="text" name="identify" placeholder="ID Number"/>        
-        <input type="text" name="job-title" placeholder="Job Title"/>
-        <input type="number" name="salary" placeholder="Annual Salary"/>
+        <input type="text" id="name" placeholder="First Name"/>
+        <input type="text" id="last-name" placeholder="Last Name"/>
+        <input type="text" id="identify" placeholder="ID Number"/>        
+        <input type="text" id="job-title" placeholder="Job Title"/>
+        <input type="number" id="salary" placeholder="Annual Salary"/>
         <div>
             <button id="add-btn">Add Employee</button>
         </div>
+        <h2>Employees</h2>
+
+        <table id="data-table">
+            <thead>
+                <tr>
+                    <th>First Name</th>
+                    <th>Last Name</th>
+                    <th>ID</th>
+                    <th>Tile</th>
+                    <th>Annual Salary</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                </tr>
+
+
+
+            </tbody>
+
+
+
+
+
+
+
+        </table>
+        
 
 
 
