created a function that gets an input and gives an output

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <main>
         <h2>Add Employee</h2>
-        <input type="text" id="name" placeholder="First Name"/>
+        <input type="text" id="name-in" placeholder="First Name"/>
         <input type="text" id="last-name" placeholder="Last Name"/>
         <input type="text" id="identify" placeholder="ID Number"/>        
         <input type="text" id="job-title" placeholder="Job Title"/>
@@ -33,7 +33,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr>
+                <tr id="table-name">
                 </tr>
 
 
