finished addEmployee function ready to test

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
                 </tr>
             </thead>
             <tbody>
-                <tr id="table-name">
-                </tr>
-
-
-
+                <tr id="table-name"></tr>
+                <tr id="table-last-name"></tr>
+                <tr id="table-identify"></tr>
+                <tr id="table-title"></tr>
+                <tr id="table-salary"></tr>
             </tbody>
 
 
