tested and running

--- a/index.html
+++ b/index.html
@@ -27,17 +27,13 @@
                 <tr>
                     <th>First Name</th>
                     <th>Last Name</th>
-                    <th>ID</th>
+                    <th >ID</th>
                     <th>Tile</th>
                     <th>Annual Salary</th>
                 </tr>
             </thead>
             <tbody>
-                <tr id="table-name"></tr>
-                <tr id="table-last-name"></tr>
-                <tr id="table-identify"></tr>
-                <tr id="table-title"></tr>
-                <tr id="table-salary"></tr>
+                <tr id="table-row"></tr>
             </tbody>
 
 
