--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <!--added rows and delete button go here-->
             </tbody>
         </table>
-        <h2 id="total-cost">Total Costs:<span>0</span></h2>
+        <p id="total-title"> Total Costs:<span id ="total-cost">0</span></p> 
         
 
 
