--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
         <table id="data-table">
             <thead>
                 <tr>
-                    <th>First Name</th>
-                    <th>Last Name</th>
-                    <th >ID</th>
-                    <th>Tile</th>
-                    <th>Annual Salary</th>
+                    <th id="first-name-head">First Name</th>
+                    <th id="last-name-head">Last Name</th>
+                    <th id="id-head">ID</th>
+                    <th id="title-head">Title</th>
+                    <th id="salary-head">Annual Salary</th>
                 </tr>
             </thead>
             <tbody>
