--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <!--added rows and delete button go here-->
             </tbody>
         </table>
-        <p id="total-title"> Total Costs:<span id ="total-cost">0</span></p> 
+        <h2 id="total-title"> Total Costs:<span id="cash">$</span><span id ="total-cost">0</span></h2> 
         
 
 
